examples/test/testpolicy2353.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2353
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key10: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value9
          key46: value12
          key47: value21
      podSelector:
        matchLabels:
          key14: value33
